@@ -46,24 +46,34 @@ public class JobAssignment extends Thread {
 			
 			@Override
 			public void run(){
-				Order nextOrder;
+				Order nextOrder = selection.take();
 				
-				while((nextOrder = selection.take()) != null){
+				while(nextOrder != null){
 					
 					boolean check = false;
-					for(MyRobotInfo r: robotMap.values())
+					for(MyRobotInfo r: robotMap.values()){
+						
 						if(r.getNumberAssigned() == 6){
 							check = true;
 						}
+					}
 					
 					if(!check){
 						assign(nextOrder);
+						nextOrder = selection.take();
 					}
 				}
 			}
 		};
 		
 		thread.start();
+	}
+	
+	private Order getOrderAssigned(int code){
+		for(Order o: assignedOrders)
+			if(o.getId() == code)
+				return o;
+		return null;
 	}
 	
 	private void assign(Order nextOrder) {
@@ -83,7 +93,9 @@ public class JobAssignment extends Thread {
 			}
 		}
 		
-		assignedOrders.add(nextOrder);
+		synchronized(assignedOrders){
+			assignedOrders.add(nextOrder);
+		}
 		
 		MyRobotInfo robot = robotMap.get(robots[index].getName());
 		
@@ -99,9 +111,11 @@ public class JobAssignment extends Thread {
 		LinkedList<Order> result = new LinkedList<Order>();
 		LinkedList<Order> currentOrder = getCurrentOrders();
 		
-		for(Order o: assignedOrders)
-			if(!currentOrder.contains(o))
-				result.add(o);
+		synchronized(assignedOrders){
+			for(Order o: assignedOrders)
+				if(!currentOrder.contains(o))
+					result.add(o);
+		}
 		
 		return result;
 	}
@@ -113,21 +127,19 @@ public class JobAssignment extends Thread {
 				
 		JobInfo job = robot.getNextJob();
 		
-		if(currentOrder == null){
-			for(Order o: assignedOrders){
-				if(job.getJobCode() == o.getId())
-					robot.setCurrentOrder(o);
-			}
-		}else if (currentOrder.getId() != job.getJobCode()){
-			for(Order o: assignedOrders){
-				if(o.getId() == currentOrder.getId()){
-					finishedOrders.add(currentOrder);
-					assignedOrders.remove(o);
-					robot.decrementNumberAssigned();
-				}
-				if(job.getJobCode() == o.getId()){
-					robot.setCurrentOrder(o);
-				}
+		synchronized(assignedOrders){
+			
+			if(currentOrder == null){
+				robot.setCurrentOrder(this.getOrderAssigned(job.getJobCode()));
+			
+			}else if (currentOrder.getId() != job.getJobCode()){
+				Order o = this.getOrderAssigned(job.getJobCode());
+				
+				finishedOrders.add(currentOrder);
+				assignedOrders.remove(currentOrder);
+				robot.decrementNumberAssigned();
+				robot.setCurrentOrder(o);	
+				
 			}
 		}
 		
@@ -170,22 +182,19 @@ public class JobAssignment extends Thread {
 	
 	
 	public synchronized void cancelOrder(int code){
-		//robotMap.get(robots[0].getName()).cancelJob(order);
-		//currentOrder = null;
-		
-		boolean current = false;
+	
 		boolean assigned = false;
 		
-		for(Order o: assignedOrders){
-			if(o.getId() == code){
-				
-				for(int i = 0; i < robots.length; i++){
-					robotMap.get(robots[i].getName()).cancelOrder(code);
-				}
-				assignedOrders.remove(o);
-				assigned = false;
-				break;
+		synchronized(assignedOrders){
+			
+			Order o = this.getOrderAssigned(code);
+			
+			for(int i = 0; i < robots.length; i++){
+				robotMap.get(robots[i].getName()).cancelOrder(code);
 			}
+			assignedOrders.remove(o);
+			assigned = false;
+		
 		}
 		
 		if(!assigned){
@@ -197,6 +206,7 @@ public class JobAssignment extends Thread {
 	private LinkedList<JobInfo> orderPath(LinkedList<JobInfo> path, int robotIndex){
 		
 		MyRobotInfo robot = robotMap.get(robots[robotIndex].getName());
+		int orderCode = path.peek().getJobCode();
 		
 		LinkedList<JobInfo> aux = (LinkedList<JobInfo>)path.clone();
 		
@@ -303,7 +313,7 @@ public class JobAssignment extends Thread {
 			float value = ress.get(i).getWeight()*ress.get(i).getQuantity();
 			if(weight + value == maxWeight){
 				
-				ress.add(i++, new JobInfo("DropBox", this.getDrop(ress.get(i-1))));
+				ress.add(i++, new JobInfo("DropBox", this.getDrop(ress.get(i-1)), orderCode));
 				weight = 0f;;
 				
 			}else if(weight + value > maxWeight){
@@ -316,7 +326,7 @@ public class JobAssignment extends Thread {
 				
 				ress.add(i, new JobInfo(info.getItem(), info.getPosition(), quantity, info.getJobCode(), info.getWeight()));
 				
-				ress.add(++i, new JobInfo("DropBox", this.getDrop(ress.get(i-1))));
+				ress.add(++i, new JobInfo("DropBox", this.getDrop(ress.get(i-1)), orderCode));
 				
 				ress.add(++i, new JobInfo(info.getItem(), info.getPosition(), info.getQuantity() - quantity, info.getJobCode(), info.getWeight()));
 				
@@ -327,8 +337,8 @@ public class JobAssignment extends Thread {
 			}
 		}
 		
-		if(!ress.getLast().isGoingToDropPoint())
-			ress.addLast(new JobInfo("DropBox", this.getDrop(ress.get(ress.size()-1))));
+		if(!ress.getLast().isDropPoint())
+			ress.addLast(new JobInfo("DropBox", this.getDrop(ress.get(ress.size()-1)), orderCode));
 		
 		weights[robotIndex] = weight;
 		
